--- a/public/templates/menu.html
+++ b/public/templates/menu.html
@@ -16,11 +16,11 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item>
-          Edit Profile
+        <ion-item menu-close href="#/app/questionnaire">
+          Questionnaire
         </ion-item>
-        <ion-item >
-          Change Password
+        <ion-item menu-close href="#/app/questions">
+          Questions
         </ion-item>
         <ion-item menu-close href="#/logout">
           Logout
