--- a/public/templates/questions.html
+++ b/public/templates/questions.html
@@ -1,26 +1,27 @@
 <ion-view view-title="{{questionnaires.name}}">
 	<ion-content>
-		Total Questions: {{questionnaires.question.length}} <!--Page: {{currentPage}}  Total: {{pageSize}}-->
+	<form name="quesForm" id="quesForm" ng-submit="ques_save();" novalidate="">
 		<ion-list class="questionnaire">
-			<ion-item class="item item-divider border-top wrpnrml" ng-repeat="ques in questionnaires.question| limitTo:pageSize">
-				{{ques.name}}? {{ques._id}}
+			<ion-item class="item item-divider border-top wrpnrml" ng-repeat="ques in questionnaires.question">
+				<!-- {{ques}} -->
+				Q: {{ques.name}}<!-- ? {{ques._id}} -->
 				<div class="row" ng-if='ques.answer_type=="text"'>
 					<div class="col">
 						<div class="list">
 							<label class="item item-input">
 								<!--input type="text" placeholder="Answer Answer " maxlength="ques.max_length"-->
-								<textarea rows="5" cols="6">Answer Answer </textarea>
+								<textarea rows="5" cols="6" ng-model="quesData[ques._id]">Answer Answer </textarea>
 							</label>
-						</div>
+					    </div>
 					</div>
 				</div>
 				<div class="row" ng-if='ques.answer_type=="dd"'>
 					<div class="col">
 						<label ng-if='ques.answer' class="item item-input item-select">
 							<div class="input-label">
-								Lightsaber
+							    Lightsaber
 							</div>
-							<select class="input-label">
+							<select class="input-label" ng-model="quesData[ques._id]">
 								<option ng-repeat="ans in ques.answer">{{ans.name}} {{ans._id}} {{ans.out_of_range}}</option>
 							</select>
 						</label>
@@ -30,7 +31,7 @@
 					<div class="col">
 						<div class="list">
 							<div class="item range range-positive">
-								{{ques.min_range}} <input type="range" name="volume" min="ques.min_range" max="ques.max_range" value="">{{ques.max_range}}
+								{{ques.min_range}} <input type="range" name="volume" min="ques.min_range" max="ques.max_range" value="" ng-model="quesData[ques._id]"> {{ques.max_range}}
 							</div>
 						</div>
 					</div>
@@ -39,37 +40,33 @@
 					<div class="col">
 						<ion-list ng-if='ques.answer' class="list">
 							<label ng-repeat="ans in ques.answer" class="item item-radio">
-								<ion-radio ng-repeat="ans in ques.answer" ng-value="ans._id"> {{ans.name}} </ion-radio>
+								<ion-radio ng-value="ans._id" ng-model="quesData[ques._id]"> {{ans.name}} </ion-radio>
 							</label>
-						</ion-list>
+				      	</ion-list>
 					</div>
 				</div>
 				<div ng-if='ques.answer_type=="cb"' class="row responsive-sm">
-					<div class="col" ng-repeat="ans in ques.answer">
-						<!--label class="checkbox"-->
-							<input type="checkbox" value="{{ans._id}}">
-						<!--/label-->
-						{{ans.name}} {{ans.out_of_range}}
+					<div class="col" ng-repeat="ans2 in ques.answer">
+							<input type="checkbox" value="{{ans2._id}}" ng-model ="ansData[ques._id][ans2._id]" />
+						{{ans2.name}}
 					</div>
 				</div>
 			</ion-item>
-			<!--ion-item class="item">
-				<div class="tabs">
-					<a class="tab-item">
-						&lt; Previous
-					</a>
-					<a class="tab-item">
-						Next &gt;
-					</a>
-				</div>
-			</ion-item>
-		</ion-list-->
-		<button class="button button-block button-dark" ng-if="pageSize < questionnaires.question.length" ng-click="loadNextPage()">
-			Show More
-		</button>
-		<!--ion-infinite-scroll distance="2"
-			on-infinite="loadMoreData()"
-			ng-if="!moredata">
-		</ion-infinite-scroll-->
+			<!-- <ion-item class="item"> -->
+				<!-- <button class="button button-block button-positive">
+				  Block Button
+				</button> -->
+				
+			<!-- </ion-item> -->
+			<div class="save-button">
+				<button class="button button-block">
+				  Save
+				</button>
+				<!-- <a class="">
+					Save
+				</a> -->
+			</div>
+		</ion-list>
+		</form>
 	</ion-content>
 </ion-view>
