--- a/public/templates/questions.html
+++ b/public/templates/questions.html
@@ -1,15 +1,34 @@
 <ion-view view-title="{{questionnaires.name}}">
 	<ion-content>
+	Total Questions: {{questionnaires.question.length}} {{answerModel }}
 	<form name="quesForm" id="quesForm" ng-submit="ques_save();" novalidate="">
 		<ion-list class="questionnaire">
-			<ion-item class="item item-divider border-top wrpnrml" ng-repeat="ques in questionnaires.question">
-				<!-- {{ques}} -->
-				Q: {{ques.name}}<!-- ? {{ques._id}} -->
+			<!--div ng-repeat="ques in questionnaires.question">
+				Q: {{ques.name}}
+				<div class="col">
+					<input type="radio" name="answerModel[ques._id]" ng-model="ques[ans._id]">Yes {{answerModel[ques._id]}}
+					<input type="radio" name="answerModel[ques._id]" ng-model="ques[ans._id]">No
+					
+				</div>
+			</div-->
+
+
+			<ion-item class="item item-divider border-top wrpnrml" ng-repeat="ques in questionnaires.question | limitTo:pageSize">
+				<Q: {{ques.name}}
+				<div class="row" ng-if='ques.answer_type=="rb"'>
+					<div class="col">
+						<ion-list ng-if='ques.answer' class="list">
+							<ion-radio ng-repeat="ans in ques.answer" name="{{ques._id}}" ng-value="ans._id" ng-model="ques[ques._id]"> {{ans.name}}  
+							</ion-radio>
+
+				      	</ion-list>
+					</div>
+				</div>
 				<div class="row" ng-if='ques.answer_type=="text"'>
 					<div class="col">
 						<div class="list">
 							<label class="item item-input">
-								<!--input type="text" placeholder="Answer Answer " maxlength="ques.max_length"-->
+								
 								<textarea rows="5" cols="6" ng-model="quesData[ques._id]">Answer Answer </textarea>
 							</label>
 					    </div>
@@ -36,15 +55,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row" ng-if='ques.answer_type=="rb"'>
-					<div class="col">
-						<ion-list ng-if='ques.answer' class="list">
-							<label ng-repeat="ans in ques.answer" class="item item-radio">
-								<ion-radio ng-value="ans._id" ng-model="quesData[ques._id]"> {{ans.name}} </ion-radio>
-							</label>
-				      	</ion-list>
-					</div>
-				</div>
+
 				<div ng-if='ques.answer_type=="cb"' class="row responsive-sm">
 					<div class="col" ng-repeat="ans2 in ques.answer">
 							<input type="checkbox" value="{{ans2._id}}" ng-model ="ansData[ques._id][ans2._id]" />
@@ -58,14 +69,12 @@
 				</button> -->
 				
 			<!-- </ion-item> -->
-			<div class="save-button">
-				<button class="button button-block">
-				  Save
-				</button>
-				<!-- <a class="">
-					Save
-				</a> -->
-			</div>
+			<button class="button button-block button-dark" ng-if="pageSize < questionnaires.question.length" ng-click="loadNextPage()">
+				Show More
+			</button>
+			<button type="submit" class="button button-block button-dark" ng-if="pageSize >= questionnaires.question.length">
+				Save
+			</button>
 		</ion-list>
 		</form>
 	</ion-content>
