--- a/public/templates/questions.html
+++ b/public/templates/questions.html
@@ -1,6 +1,6 @@
 <ion-view view-title="{{questionnaires.name}}">
 	<ion-content>
-	Total Questions: {{questionnaires.question.length}} {{answerModel }}
+	Total Questions: {{questionnaires.question.length}} 
 	<form name="quesForm" id="quesForm" ng-submit="ques_save();" novalidate="">
 		<ion-list class="questionnaire">
 			<!--div ng-repeat="ques in questionnaires.question">
