--- a/public/templates/questionnaire.html
+++ b/public/templates/questionnaire.html
@@ -4,9 +4,7 @@
 	        <h3 class="center"> </h3>
 	        <div class="title-date center"> 22 September, 2015</div>
       	</ion-item-->
-      	<div ng-show="error_message" class="alert alert-danger">
-	        {{error_message}}
-	    </div>
+      	<div flash-message="5000" ></div>
 		<ion-list class="questionnaire" ng-controller="AppCtrl" show-delete="shouldShowDelete" show-reorder="shouldShowReorder" can-swipe="listCanSwipe">
 	      	<ion-item href="/#/app/questions/{{Qitem._id}}" class="item item-divider border-right ques-lnk question-padding" ng-repeat="Qitem in questionnaires">
 		        <div class="ques-title">{{Qitem.questionnaire.name}}</div>
