--- a/public/templates/menu.html
+++ b/public/templates/menu.html
@@ -1,8 +1,8 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
     <ion-nav-bar class="bar-stable">
-      <!--ion-nav-back-button>
-      </ion-nav-back-button-->
+      <ion-nav-back-button>
+      </ion-nav-back-button>
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
@@ -16,11 +16,11 @@
     </ion-header-bar-->
     <!--ion-content-->
       <ion-list>
+        <!--ion-item menu-close href="#/app/profile" class="left-menu">
+          Edit Profile
+        </ion-item-->
         <ion-item menu-close href="#/app/questionnaire" class="left-menu">
-          Questionnaire
-        </ion-item>
-        <ion-item menu-close href="#/app/questions" class="left-menu">
-          Questions
+          Pending Questionnaires
         </ion-item>
         <ion-item menu-close href="#/logout" class="left-menu">
           Logout
