--- a/public/templates/questionnaire.html
+++ b/public/templates/questionnaire.html
@@ -1,4 +1,10 @@
 <ion-view view-title="Pending Questionnaires">
+
+      <ion-nav-buttons side="right">
+        <button class="button button-icon button-clear ion-key" menu-toggle="right" ng-click="changePassword();">
+        </button>
+      </ion-nav-buttons>
+      
   	<ion-content>
       	<!--ion-item class="quqes-title">
 	        <h3 class="center"> </h3>
@@ -7,15 +13,16 @@
       	<div flash-message="5000" ></div>
 		<ion-list class="questionnaire" ng-controller="AppCtrl" show-delete="shouldShowDelete" show-reorder="shouldShowReorder" can-swipe="listCanSwipe">
 	      	<ion-item href="/#/app/questions/{{Qitem._id}}" class="item item-divider border-right ques-lnk question-padding" ng-repeat="Qitem in questionnaires">
+			<!--{{Qitem}}-->
 		        <div class="ques-title">{{Qitem.questionnaire.name}}</div>
 		        <div class="datetime">
 		        	<span class="time">
 		        		<i class="ion-clock"></i>
-		        		{{Qitem.datetime | date:"h:mma"}}
+		        		{{Qitem.ntime}}
 		        	</span>
 		        	<span>
 		        		<i class="ion-calendar"></i>
-		        		{{Qitem.datetime | date:"MMMM dd, yyyy"}}
+		        		{{Qitem.ndate}}
 		        	</span>
 		        </div>
 	      	</ion-item>
