--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-content class="greenbg">
-    <h1 class="main-title">Houspital</h1>
+    <h1 class="main-title">Housepital</h1>
     <div ng-show="error_message" class="alert alert-danger">
         {{error_message}}
     </div>
