--- a/public/templates/menu.html
+++ b/public/templates/menu.html
@@ -16,9 +16,9 @@
     </ion-header-bar-->
     <!--ion-content-->
       <ion-list>
-        <!--ion-item menu-close href="#/app/profile" class="left-menu">
+        <ion-item menu-close href="#/app/profile" class="left-menu">
           Edit Profile
-        </ion-item-->
+        </ion-item>
         <ion-item menu-close href="#/app/questionnaire" class="left-menu">
           Pending Questionnaires
         </ion-item>
