--- a/public/css/customized.css
+++ b/public/css/customized.css
@@ -172,7 +172,7 @@ h1{
 	direction: ltr;
 	max-width: 100%
 }
-input.ng-invalid-required{
+.has-error input{
 	border:1px solid #ff0000!important;
 }
 .error-label{
@@ -182,8 +182,31 @@ input.ng-invalid-required{
 	padding: 0px !important;
 }
 .fullwidth{
-	width:100% !important;
+	width:95% !important;
+	padding-left: 5px;
 }
 .margintop{
 	margin-top: 0px !important;
+}
+select {
+	background: #fff none repeat scroll 0 0;
+    border: 1px solid #a0a0a0;
+    color: #a0a0a0;
+    padding: 5px;
+    width: 95%;
+}
+.col-70 {
+    -moz-box-flex: 0;
+    flex: 0 0 70%;
+    max-width: 70%;
+}
+.padding7{
+	padding: 7px 0;
+    position: absolute;
+}
+.alert-success {
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+    color: #3c763d;
+    padding: 10px 30px 10px 8px;
 }
