--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -6,21 +6,21 @@
     </div>
     <form name="loginForm" id="loginForm" ng-submit="sign_in();" novalidate="">
       <div class="list">
-        <label class="item item-input" ng-class="{'has-errors' : loginForm.username.$invalid, 'no-errors' : loginForm.username.$valid}">
+        <label class="item item-input" ng-class="{'has-error': loginForm.username.$dirty && (loginForm.username.$error.required || errordetail.username)}">
           <i class="icon ion-email placeholder-icon"></i>
-          <input type="text" placeholder="Username" ng-model="loginData.username" ng-minlength="2" ng-maxlength="20" required>
+          <input type="text" placeholder="Username" name="username" id="username" ng-model="loginData.username" ng-minlength="2" ng-maxlength="20" required>
         </label>
-        <div class="error-container" ng-show="loginForm.username.$error" ng-messages="loginForm.username.$error">
-          <div ng-messages-include="error-list.html"></div>
+        <div ng-show="loginForm.username.$dirty && (loginForm.username.$error.required || errordetail.username)" class="login-err error-container">
+          Username is required.
         </div>
-        <label class="item item-input" ng-class="{ 'has-errors' : loginForm.password.$invalid && loginForm.$submitted, 'no-errors' : loginForm.password.$valid  && loginForm.$submitted}">
+        <label class="item item-input"  ng-class="{'has-error': loginForm.password.$dirty && (loginForm.password.$error.required || errordetail.password)}">
           <i class="icon ion-key placeholder-icon"></i>
-          <input type="password" placeholder="Password" ng-model="loginData.password" ng-minlength="4" ng-maxlength="20" required>
+          <input type="password" placeholder="Password" id="password" name="password" ng-model="loginData.password" ng-minlength="4" ng-maxlength="20" required>
         </label>
-        <div class="error-container last-error-container" ng-show="loginForm.password.$error && loginForm.$submitted" ng-messages="loginForm.password.$error">
-            <div ng-messages-include="error-list.html"></div>
+        <div ng-show="loginForm.password.$dirty && (loginForm.password.$error.required || errordetail.password)" class="login-err error-container">
+          Password is required.
         </div>
-        <button class="button button-block button-dark" type="submit">
+        <button class="button button-block button-dark" ng-disabled="loginForm.$invalid" type="submit">
           LogIn
         </button>   
         <!--ion-item class="link" href="#/app/questionnaire">
