change password working...

--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -9,7 +9,7 @@
 							<label class="padding7">First Name</label>
 						</div>
 						<div class="col col-70 padding-non" ng-class="{'has-error':patientForm.first_name.$dirty && (patientForm.first_name.$error.required || errordetail.first_name)}">
-							<input placeholder="Frist Name" type="text" name="first_name" id="first_name" required value="" ng-model="patientData.first_name" class="fullwidth"/>
+							<input placeholder="First Name" type="text" name="first_name" id="first_name" required value="" ng-model="patientData.first_name" class="fullwidth"/>
 						</div>
 					</div>
 					<div class="row margintop padding-non" ng-show="patientForm.first_name.$dirty && (patientForm.first_name.$error.required || errordetail.first_name)">
