--- a/public/css/customized.css
+++ b/public/css/customized.css
@@ -210,3 +210,5 @@ select {
     color: #3c763d;
     padding: 10px 30px 10px 8px;
 }
+
+.bar .title{background : #23b699 none repeat scroll 0 0 !important;}
