--- a/public/templates/changepassword.html
+++ b/public/templates/changepassword.html
@@ -1,41 +1,62 @@
-<ion-view view-title="">
+<ion-modal-view>
+  <ion-header-bar>
+    <h1 class="title">Change Password</h1>
+    <div class="buttons">
+      <button class="button button-clear" ng-click="closeLogin()">Close</button>
+    </div>
+  </ion-header-bar>
   <ion-content>
-  Change Password
+    <!--<form ng-submit="doLogin()">
+      <div class="list">
+        <label class="item item-input">
+          <span class="input-label">Username</span>
+          <input type="text" ng-model="loginData.username">
+        </label>
+        <label class="item item-input">
+          <span class="input-label">Password</span>
+          <input type="password" ng-model="loginData.password">
+        </label>
+        <label class="item">
+          <button class="button button-block button-positive" type="submit">Log in</button>
+        </label>
+      </div>
+    </form>-->
     <form name="changepasswordForm" id="changepasswordForm" ng-submit="cp_save();" novalidate="">
-      Q: {{ques.name}}
       <div class="col">
           <div class="list">
-              <label class="item item-input">
-                <input type="text" name="oldpassword" value="" ng-model="cpData[oldpassword]" />
+              <label class="item item-input" ng-class="{'has-error':changepasswordForm.oldpassword.$dirty && (changepasswordForm.oldpassword.$error.required)}">
+                <input type="password" name="oldpassword" placeholder='Old Password' required value="" ng-model="cpData.oldpassword"/>
               </label>
+              <div class="row margintop padding-non" ng-show="changepasswordForm.oldpassword.$dirty && (changepasswordForm.oldpassword.$error.required)">
+                <div class="col col-70 padding-non fullwidth error-label">Old password is required.</div>
+              </div>
           </div>
-          <div class="list">
+            
+          <div class="list" ng-class="{'has-error':changepasswordForm.newpassword.$dirty && (changepasswordForm.newpassword.$error.required)}">
               <label class="item item-input">
-                <input type="text" name="newpassword" value="" ng-model="cpData[newpassword]" />
+                <input type="password" name="newpassword" placeholder='New Password' required value="" ng-model="cpData.newpassword" />
               </label>
+              <div class="row margintop padding-non" ng-show="changepasswordForm.newpassword.$dirty && (changepasswordForm.newpassword.$error.required)">
+                <div class="col col-70 padding-non fullwidth error-label">New password is required.</div>
+              </div>
           </div>
-          <div class="list">
+          
+          <div class="list" ng-class="{'has-error':changepasswordForm.confirmpassword.$dirty && (changepasswordForm.confirmpassword.$error.required)  }">
               <label class="item item-input">
-                <input type="text" name="confirmpassword" value="" ng-model="cpData[confirmpassword]" />
+                <input type="password" name="confirmpassword" placeholder='Confirm Password' required value="" ng-model="cpData.confirmpassword" />
               </label>
+              <div class="row margintop padding-non">
+                <!--<div class="col col-70 padding-non fullwidth error-label">Confirm password is required.</div>-->
+                <label class="fullwidth error-label" ng-show="changepasswordForm.confirmpassword.$dirty && (changepasswordForm.confirmpassword.$error.required)">Confirm password is required.</label>
+              </div>
+              <div class="row margintop padding-non" ng-show="changepasswordForm.confirmpassword.$dirty && (changepasswordForm.confirmpassword.$error.required)">
+                <label class="fullwidth error-label" ng-show="changepasswordForm.newpassword != changepasswordForm.confirmpassword">New password and confirm password doesn't match.</label>
+              </div>
           </div>
       </div>
-        
-        <!--<div class="row" ng-if='ques.answer_type=="number"'>
-          <div class="col">
-            <div class="list">
-                <div class="item range range-positive">
-                        {{ques.min_range}} <input type="range" name="volume" min="ques.min_range" max="ques.max_range" value="" ng-model="cpData[ques._id]"> {{ques.max_range}}
-                </div>
-            </div>
-          </div>
-        </div>-->
-        <!--<button class="button button-block button-dark" ng-if="pageSize < questionnaires.question.length" ng-click="loadNextPage()">
-                Show More
-        </button>-->
-        <button type="submit" class="button button-block button-dark">
-            Save
-        </button>
+      <button type="submit" class="button button-block button-dark" ng-disabled="changepasswordForm.$invalid">
+          Save
+      </button>
     </form>
   </ion-content>
-</ion-view>
+</ion-modal-view>
