Change password validations and modal popup done.

--- a/public/templates/changepassword.html
+++ b/public/templates/changepassword.html
@@ -6,26 +6,17 @@
     </div>
   </ion-header-bar>
   <ion-content>
-    <!--<form ng-submit="doLogin()">
-      <div class="list">
-        <label class="item item-input">
-          <span class="input-label">Username</span>
-          <input type="text" ng-model="loginData.username">
-        </label>
-        <label class="item item-input">
-          <span class="input-label">Password</span>
-          <input type="password" ng-model="loginData.password">
-        </label>
-        <label class="item">
-          <button class="button button-block button-positive" type="submit">Log in</button>
-        </label>
-      </div>
-    </form>-->
     <form name="changepasswordForm" id="changepasswordForm" ng-submit="cp_save();" novalidate="">
       <div class="col">
+        <div ng-show="success_message" class="alert alert-success">
+            {{success_message}}
+        </div>
+        <div ng-show="err_message" class="alert alert-danger">
+            {{err_message}}
+        </div>
           <div class="list">
-              <label class="item item-input" ng-class="{'has-error':changepasswordForm.oldpassword.$dirty && (changepasswordForm.oldpassword.$error.required)}">
-                <input type="password" name="oldpassword" placeholder='Old Password' required value="" ng-model="cpData.oldpassword"/>
+              <label class="item item-input" ng-class="{'has-error':(changepasswordForm.oldpassword.$dirty && changepasswordForm.oldpassword.$error.required) || ()}">
+                  <input type="password" name="oldpassword" placeholder='Old Password' required value="" ng-model="cpData.oldpassword"/>
               </label>
               <div class="row margintop padding-non" ng-show="changepasswordForm.oldpassword.$dirty && (changepasswordForm.oldpassword.$error.required)">
                 <div class="col col-70 padding-non fullwidth error-label">Old password is required.</div>
@@ -34,23 +25,23 @@
             
           <div class="list" ng-class="{'has-error':changepasswordForm.newpassword.$dirty && (changepasswordForm.newpassword.$error.required)}">
               <label class="item item-input">
-                <input type="password" name="newpassword" placeholder='New Password' required value="" ng-model="cpData.newpassword" />
+                <input type="password" name="newpassword" id="newpassword" autocomplete="off" placeholder='New Password' required value="" ng-model="cpData.newpassword" />
               </label>
               <div class="row margintop padding-non" ng-show="changepasswordForm.newpassword.$dirty && (changepasswordForm.newpassword.$error.required)">
                 <div class="col col-70 padding-non fullwidth error-label">New password is required.</div>
               </div>
           </div>
           
-          <div class="list" ng-class="{'has-error':changepasswordForm.confirmpassword.$dirty && (changepasswordForm.confirmpassword.$error.required)  }">
+          <div class="list" ng-class="{'has-error': (changepasswordForm.confirmpassword.$dirty && changepasswordForm.confirmpassword.$error.required) || cpData.newpassword != cpData.confirmpassword}">
               <label class="item item-input">
-                <input type="password" name="confirmpassword" placeholder='Confirm Password' required value="" ng-model="cpData.confirmpassword" />
+                <input type="password" name="confirmpassword" id="confirmpassword" autocomplete="off" placeholder='Confirm Password' required value="" ng-model="cpData.confirmpassword" />
               </label>
-              <div class="row margintop padding-non">
-                <!--<div class="col col-70 padding-non fullwidth error-label">Confirm password is required.</div>-->
-                <label class="fullwidth error-label" ng-show="changepasswordForm.confirmpassword.$dirty && (changepasswordForm.confirmpassword.$error.required)">Confirm password is required.</label>
-              </div>
               <div class="row margintop padding-non" ng-show="changepasswordForm.confirmpassword.$dirty && (changepasswordForm.confirmpassword.$error.required)">
-                <label class="fullwidth error-label" ng-show="changepasswordForm.newpassword != changepasswordForm.confirmpassword">New password and confirm password doesn't match.</label>
+                <!--<div class="col col-70 padding-non fullwidth error-label">Confirm password is required.</div>-->
+                <label class="fullwidth error-label">Confirm password is required.</label>
+              </div>
+              <div class="row margintop padding-non" ng-show="cpData.newpassword != cpData.confirmpassword">
+                <label class="fullwidth error-label">New password and confirm password doesn't match.</label>
               </div>
           </div>
       </div>
