change password minor tweaks.

--- a/public/templates/changepassword.html
+++ b/public/templates/changepassword.html
@@ -15,7 +15,7 @@
             {{err_message}}
         </div>
           <div class="list">
-              <label class="item item-input" ng-class="{'has-error':(changepasswordForm.oldpassword.$dirty && changepasswordForm.oldpassword.$error.required) || ()}">
+              <label class="item item-input" ng-class="{'has-error':(changepasswordForm.oldpassword.$dirty && changepasswordForm.oldpassword.$error.required)}">
                   <input type="password" name="oldpassword" placeholder='Old Password' required value="" ng-model="cpData.oldpassword"/>
               </label>
               <div class="row margintop padding-non" ng-show="changepasswordForm.oldpassword.$dirty && (changepasswordForm.oldpassword.$error.required)">
