--- a/public/templates/questions.html
+++ b/public/templates/questions.html
@@ -70,7 +70,7 @@
 					</button> -->
 					
 				<!-- </ion-item> -->
-				<button class="button button-block button-dark" ng-if="pageSize < questionnaires.question.length" ng-click="loadNextPage()">
+				<button type="button" class="button button-block button-dark" ng-if="pageSize < questionnaires.question.length" ng-click="loadNextPage()">
 					Show More
 				</button>
 				<button type="submit" class="button button-block button-dark" ng-if="pageSize >= questionnaires.question.length">
