--- a/public/templates/questionnaire.html
+++ b/public/templates/questionnaire.html
@@ -12,7 +12,7 @@
       	</ion-item-->
       	<div flash-message="5000" ></div>
 		<ion-list class="questionnaire" ng-controller="AppCtrl" show-delete="shouldShowDelete" show-reorder="shouldShowReorder" can-swipe="listCanSwipe">
-	      	<ion-item href="/#/app/questions/{{Qitem._id}}" class="item item-divider border-right ques-lnk question-padding" ng-repeat="Qitem in questionnaires">
+	      	<ion-item href="#/app/questions/{{Qitem._id}}" class="item item-divider border-right ques-lnk question-padding" ng-repeat="Qitem in questionnaires">
 			<!--{{Qitem}}-->
 		        <div class="ques-title">{{Qitem.questionnaire.name}}</div>
 		        <div class="datetime">
