--- a/public/templates/menu.html
+++ b/public/templates/menu.html
@@ -19,6 +19,9 @@
         <ion-item menu-close href="#/app/profile" class="left-menu">
           Edit Profile
         </ion-item>
+        <ion-item menu-close href="#/app/fitbit" class="left-menu">
+          Heart Rate
+        </ion-item>
         <ion-item menu-close href="#/app/questionnaire" class="left-menu">
           Pending Questionnaires
         </ion-item>
