--- a/public/templates/menu.html
+++ b/public/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="false">
+<ion-side-menus enable-menu-with-back-views="true">
   <ion-side-menu-content>
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
@@ -21,6 +21,9 @@
         </ion-item>
         <ion-item menu-close href="#/app/hr" class="left-menu">
           Heart Rate
+        </ion-item>
+        <ion-item menu-close href="#/app/steps" class="left-menu">
+          Steps
         </ion-item>
         <ion-item menu-close href="#/app/questionnaire" class="left-menu">
           Pending Questionnaires
